--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"    
+    "preview": "vite preview" 
   },
   "dependencies": {
     "@react-three/drei": "^9.120.8",
@@ -32,7 +30,6 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
-    "gh-pages": "^6.3.0",
     "globals": "^15.12.0",
     "leva": "^0.10.0",
     "vite": "^6.0.1"
